--- a/method.tex
+++ b/method.tex
@@ -234,6 +234,10 @@ $PAI_{\%,i}$ 是第 $i$ 层截获 $PAI$ 与最顶部冠层 $PAI$ 的比值，$x_
 公式参数 $(\alpha, \beta)$ 等参数由率定得到；气象参数取自阿拉尔气象站；
 作物参数和水分胁迫参数由率定得到。
 
+\section{敏感性分析}
+
+Sobol敏感性分析\cite{sobol2001}。
+
 \section{多目标优化}
 NSGA-III 的基本框架类似于原始的 NSGA-II 算法 \cite{NSGA2}，其选择运算符有重大变化。
 但是，与 NSGA-II 不同的是， NSGA-III 中种群成员间多样性的维持是通过提供和自适应更新一些分布良好的参考点来帮助的。
