--- a/thesis.bib
+++ b/thesis.bib
@@ -481,6 +481,22 @@
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-2745.2006.01163.x}
 }
 
+@article{guerraIrrigationWaterUse2007,
+  title = {Irrigation Water Use Estimates Based on Crop Simulation Models and Kriging},
+  author = {Guerra, L. C. and Garcia y Garcia, A. and Hook, J. E. and Harrison, K. A. and Thomas, D. L. and Stooksbury, D. E. and Hoogenboom, G.},
+  date = {2007-05-10},
+  journaltitle = {Agricultural Water Management},
+  shortjournal = {Agricultural Water Management},
+  volume = {89},
+  number = {3},
+  pages = {199--207},
+  issn = {0378-3774},
+  doi = {10.1016/j.agwat.2007.01.010},
+  abstract = {In Georgia and many other southeastern states in the USA, the amount of water used by agriculture for irrigation is largely unknown due to the lack of reporting requirements. Recent droughts and a water dispute with the neighboring states that include Alabama and Florida have highlighted the need for an accurate estimate of water use by agriculture. The goal of this study was to evaluate the use of a crop simulation model combined with kriging for estimating the spatial distribution of the monthly irrigation water use for cotton in the Coastal Plain region of Georgia. Farmers' monthly irrigation applications for cotton during the 2002 and 2003 growing seasons were obtained from selected sites of the Agricultural Water Pumping program. We selected 80 fields for 2002 and 51 fields for 2003. For each of these fields, we used the Cropping System Model-CROPGRO-Cotton to simulate farmers' irrigation applications. Ordinary kriging was used to estimate the spatial distribution of monthly total irrigation in the region. We then compared the spatial and temporal distribution of irrigation amounts predicted by the Cropping System Model-CROPGRO-Cotton with the amount of water that the farmers actually applied. The Cropping System Model-CROPGRO-Cotton simulated the temporal pattern of irrigation applications very well during the growing season. The root mean square error (RMSE) between observed and simulated total irrigation for different months ranged from 5 to 23mm in 2002 and from 2 to 14mm in 2003. The RMSE values were generally higher in 2002 when the irrigation applications across the region were more variable when compared with 2003. Consequently, a better agreement on the spatial distribution of monthly total irrigation for the observed and simulated was obtained for 2003 than for 2002.},
+  langid = {english},
+  keywords = {Cotton,Crop models,Crop water management,Decision support systems,Irrigation}
+}
+
 @article{haim2008,
   title = {Assessing the Impact of Climate Change on Representative Field Crops in {{Israeli}} Agriculture: A Case Study of Wheat and Cotton},
   shorttitle = {Assessing the Impact of Climate Change on Representative Field Crops in {{Israeli}} Agriculture},
@@ -674,6 +690,21 @@
   abstract = {The simulation of cottonseed (Gossypium hirsutum L.) growth is still an area of great uncertainty, especially in the process of cottonseed quality formation. A simple process-based model was developed to predict cotton boll maturation period and simulate cottonseed biomass accumulation, protein, and oil content. The cotton boll maturation period module took solar radiation and N nutrition factors into account in addition to temperature and variety maturity profile. Based on the hypothesis that the accumulation of biomass, oil, and protein are mainly sink-determined, the model was developed by considering parameters of cultivar characteristics, weather (temperature and solar radiation), and crop management variables (precisely N supply). The subtending leaf N concentration of cotton boll was simulated by a new semi-empirical model, and worked as the direct indicator of the N nutrition effect on cottonseed growth and development. The model was calibrated using data obtained in experiment conducted in Nanjing (the lower reaches of Yangtze River Valley) in 2005 and 2006. The model was then tested using two field experimental data sets. One was obtained in Nanjing, China in 2007, and the other in the Yellow River Valley (Xuzhou and Anyang) and the lower reaches of Yangtze River Valley (Huaian), China in 2005. The simulated values of boll maturation period by the model were very consistent with the observed values, with root mean square error (RMSE) lower than 3 days. The RMSE of cottonseed dry weight, protein content, and oil content predictions were 8.9mgseed-1, 2.19\%, and 2.71\%, respectively. The result showed that the model is sufficiently robust to predict the cotton boll maturation period, cottonseed dry weight, and quality in wide range of conditions. It is not only a necessary component of cotton growth model, but also provides a good platform for further study in modeling cottonseed protein and oil yield.},
   langid = {english},
   keywords = {Biomass accumulation,Boll maturation period,Cottonseed,Crop model,Oil content,Protein content}
+}
+
+@article{liModificationCSMCROPGROCottonModel2020a,
+  title = {Modification of {{CSM-CROPGRO-Cotton}} Model for Simulating Cotton Growth and Yield under Various Deficit Irrigation Strategies},
+  author = {Li, Meng and Du, Yingji and Zhang, Fucang and Fan, Junliang and Ning, Yao and Cheng, Houliang and Xiao, Chao},
+  date = {2020-12-01},
+  journaltitle = {Computers and Electronics in Agriculture},
+  shortjournal = {Computers and Electronics in Agriculture},
+  volume = {179},
+  pages = {105843},
+  issn = {0168-1699},
+  doi = {10.1016/j.compag.2020.105843},
+  abstract = {Cotton (Gossypium hirsutum L.) is one of the main crops in Southern Xinjiang of China, and it is the major component of the regional economy. However, cotton cultivation in this region is facing severe challenges, e.g., the projected increase in the frequency of droughts and the decrease in precipitation in the future. Development and evaluation of deficit irrigation strategies in this region can potentially conserve irrigation water while maintaining cotton yields. In this study, the actual soil evaporation was introduced into the calculation process of stress factors in the Decision Support System for Agrotechnology Transfer (DSSAT) Cropping System Model (CSM-CROPGRO-Cotton) to simulate and evaluate the growth and yield of drip-irrigated cotton under mulching in response to various deficit irrigation strategies. The modified CSM-CROPGRO-Cotton model was calibrated using field data under full irrigation (100\% reference evapotranspiration (ET0)) and validated by deficit irrigation data (0.4 ET0, 0.6 ET0 and 0.8 ET0 at the bud, flowering and boll stages) during the two cotton growing seasons of 2018 and 2019. The results showed that the modified model CSM-CROPGRO-Cotton simulated the growth index of cotton well under various deficit irrigation conditions. The index of agreement (d) of the simulated and measured biomass was greater than 0.845, and the coefficient of determination (R2) was greater than 0.967 (P~{$<~$}0.01). Although the simulation of leaf area index was not as good as biomass, it also yielded satisfactory estimates, with d~{$>~$}0.934 and R2~{$>~$}0.817 (P~{$<~$}0.01). The simulated photoperiods in various deficit irrigation treatments were consistent with the observations. The averaged absolute relative error (ARE) in seed cotton yield over the deficit irrigation treatments was 2.1\%, indicating high simulation accuracy. The results showed that the modified CSM-CROPGRO-Cotton model was appropriate for simulating cotton growth and yield under various water deficit strategies, which is a reasonable decision support system in managing irrigation for sustainable agriculture. The simulations also indicated that adopting deficit irrigation practices under normal weather conditions could conserve water without adversely affecting seed cotton yield, but there was a risk of increased yield loss under dry conditions.},
+  langid = {english},
+  keywords = {Biomass,Cotton,CSM-CROPGRO-cotton model,Soil moisture,Water stress}
 }
 
 @article{linker2016,
@@ -1025,6 +1056,33 @@
   annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.2136/sssaj2007.0325}
 }
 
+@article{saltelli2002,
+  title = {Making Best Use of Model Evaluations to Compute Sensitivity Indices},
+  author = {Saltelli, Andrea},
+  date = {2002},
+  journaltitle = {Computer Physics Communications},
+  volume = {145},
+  number = {2},
+  pages = {280--297},
+  issn = {0010-4655},
+  doi = {10.1016/s0010-4655(02)00280-1}
+}
+
+@article{saltelli2010,
+  title = {Variance Based Sensitivity Analysis of Model Output. {{Design}} and Estimator for the Total Sensitivity Index},
+  author = {Saltelli, Andrea and Annoni, Paola and Azzini, Ivano and Campolongo, Francesca and Ratto, Marco and Tarantola, Stefano},
+  date = {2010-02-01},
+  journaltitle = {Computer Physics Communications},
+  shortjournal = {Computer Physics Communications},
+  volume = {181},
+  number = {2},
+  pages = {259--270},
+  issn = {0010-4655},
+  doi = {10.1016/j.cpc.2009.09.018},
+  abstract = {Variance based methods have assessed themselves as versatile and effective among the various available techniques for sensitivity analysis of model output. Practitioners can in principle describe the sensitivity pattern of a model Y=f(X1,X2,\ldots,Xk) with k uncertain input factors via a full decomposition of the variance V of Y into terms depending on the factors and their interactions. More often practitioners are satisfied with computing just k first order effects and k total effects, the latter describing synthetically interactions among input factors. In sensitivity analysis a key concern is the computational cost of the analysis, defined in terms of number of evaluations of f(X1,X2,\ldots,Xk) needed to complete the analysis, as f(X1,X2,\ldots,Xk) is often in the form of a numerical model which may take long processing time. While the computational cost is relatively cheap and weakly dependent on k for estimating first order effects, it remains expensive and strictly k-dependent for total effect indices. In the present note we compare existing and new practices for this index and offer recommendations on which to use.},
+  langid = {english}
+}
+
 @article{shumway2012,
   title = {Best {{Nitrogen Management Practices Can Reduce}} the {{Potential Flux}} of {{Nitrogen Out}} of the {{Arkansas Delta}}},
   author = {Shumway, Cal and Delgado, Jorge A. and Bunch, Theodis and Hansen, Leroy and Ribaudo, Marc},
@@ -1037,6 +1095,23 @@
   doi = {10.1097/SS.0b013e31823fd4ae},
   abstract = {Some studies have reported that nitrogen losses in the Arkansas Delta can contribute to the flux of nitrogen into the Mississippi River Basin, which can in turn contribute to the nitrate load that the hypoxia problem in the Gulf of Mexico has been attributed to. The need to reduce nitrogen losses in this region can be addressed with the development and validation of robust, new assessment tools that can be used to quickly evaluate management practices and their effects on the environment in terms of potential nitrogen losses and other factors. The recently developed concept of trading nitrogen in air and water quality markets can be used in conjunction with field studies to assess the potential benefits of nitrogen management. In 2008 and 2009, field studies were conducted to collect data to test the new Nitrogen Loss and Environmental Assessment Package (NLEAP) and its ability to simulate nitrate dynamics for different cropping systems grown in three different locations in the Arkansas Delta. Simulation by the NLEAP conducted for cotton, soybean, and corn grown in the Arkansas Delta showed that the model was able to simulate the effects of management on residual soil nitrate (P {$<$} 0.01). The simulation showed that residual nitrate can range from about 10 to 240 kg NO3-N ha-1 in the top 1.5 m of soil, in agreement with measured values. In addition, long-term NLEAP simulation analysis showed that rotations of soybeans into corn systems significantly reduced emissions of N2O across this region and reduced NO3-N leaching losses at the field level.},
   langid = {american}
+}
+
+@article{sobol2001,
+  title = {Global Sensitivity Indices for Nonlinear Mathematical Models and Their {{Monte Carlo}} Estimates},
+  author = {Sobol{${'}$}, I. M},
+  date = {2001-02-15},
+  journaltitle = {Mathematics and Computers in Simulation},
+  shortjournal = {Mathematics and Computers in Simulation},
+  series = {The {{Second IMACS Seminar}} on {{Monte Carlo Methods}}},
+  volume = {55},
+  number = {1},
+  pages = {271--280},
+  issn = {0378-4754},
+  doi = {10.1016/S0378-4754(00)00270-6},
+  abstract = {Global sensitivity indices for rather complex mathematical models can be efficiently computed by Monte Carlo (or quasi-Monte Carlo) methods. These indices are used for estimating the influence of individual variables or groups of variables on the model output.},
+  langid = {english},
+  keywords = {Mathematical modelling,Monte Carlo method,Quasi-Monte Carlo method,Sensitivity analysis}
 }
 
 @article{sommer2008,
