--- a/thesis.tex
+++ b/thesis.tex
@@ -1,6 +1,7 @@
 \documentclass[a4paper,oneside,zihao=5,AutoFakeBold]{ctexbook}
 \usepackage[ruled,linesnumbered]{algorithm2e}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage[backend=biber,style=gb7714-2015]{biblatex}% chktex 8
 \usepackage{booktabs}
 \usepackage[inline]{enumitem} % inline enumerate
