--- a/thesis.tex
+++ b/thesis.tex
@@ -61,7 +61,8 @@ decision/.style = {base, diamond, aspect=2},
 \setcounter{page}{1}
 \input{intro}
 \input{method}
-\input{model}
+\input{sa}
+\input{moo}
 \input{result}
 \input{conclusion}
 \printbibliography
