--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,14 +1,16 @@
 \chapter{结论与展望}
 
-%The source code of the Cotton2K model has been modified and the new more detailed canopy submodel has been replaced.
-Cotton2K 源码被修改加入更细节的冠层子模块。
-Such modifications proved to be helpful for the improvement of model simulation accuracy.
-Compared with other models, such as CSM-Cropgro-Cotton and OZCOT, the simulation accuracy of Cotton2K model still has much room for improvement.
-The simulation results showed that the total above-ground biomass and seed cotton yield increased with increasing irrigation, which was comparable to the actual measurements.
-These simulation results may serve as reference data for planting non-mulched cultivation cotton in South Xinjiang.
-本文筛选了 Cotton2K 模型的 46 个品种参数，探究了模型内部各个参数对模型结果
-的相互影响，最终确立了参数值，并将模拟值与实测值进行了对比分析，验证了模型模
-拟效果较好，为 Cotton2K 模型区域化提供了有效依据。但仍存在一些不足： 1）在模型
-参数优化时，未考虑其它生育指标， 2）在利用 Cotton2K 模型的模拟过程中，未考虑不
-同施肥处理对模拟结果的影响。下一步需要继续开展田间试验，增加多年的数据值，并
-考虑多个生育指标对模型参数进行优化，从而提高模型的模拟精度。
+本文 Cotton2K 源码被修改加入更细节的分层冠层子模块。%
+事实证明，这样的修改有助于提高模型的模拟精度。
+与其他模型，如CSM-Cropgro-Cotton和OZCOT相比，Cotton2K模型的模拟精度仍有很大的提升空间。%
+这可能是由于多种原因引起的。%
+模拟结果显示，地上总生物量和籽棉产量随着灌溉量的增加而增加，这与实际测量结果相当。%
+这些模拟结果可作为南疆无膜栽培棉花的种植的参考数据。
+
+本文仍存在一些不足：
+\begin{enumerate}
+    \item 在参数率定时考虑的生理指标过少
+    \item 未检验模型对除阿拉尔地区以外的其他地区的有效性
+\end{enumerate}
+
+下一步需要继续开展田间试验，增加更多的新疆其他地区田间数据，并考虑多个生育指标对模型参数进行优化，从而进一步提高模型的模拟精度。
